applications/radarr/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("radarr.joshaconnor.duckdns.org")
      kind: Rule
      services:
        - name: radarr
          port: 7878
